fix: 添加 z-index 来兼容有底部的情况

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 #vehiclePlateKeyboard {
   .vehicle-plate-keyboard-container {
     position: fixed;
+    z-index: 9999;
     min-height: 276px;
     background-color: #e8e9eb;
     bottom: 0;
